--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "market-space",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "dev": "ts-node-dev --respawn --pretty --transpile-only src/app.ts"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -11,10 +11,8 @@
     "debug": "~2.6.9",
     "dotenv": "~16.0.3",
     "express": "~4.16.1",
-    "helmet": "^6.0.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "helmet": "~6.0.1",
+    "http-errors": "~1.6.3"
   },
   "main": "app.js",
   "keywords": [],
@@ -22,6 +20,12 @@
   "license": "ISC",
   "description": "Market place API that make endpoints for e-commerce operations available for testing purposes",
   "devDependencies": {
+    "@types/cors": "~2.8.13",
+    "@types/dotenv": "~8.2.0",
+    "@types/express": "~4.17.15",
+    "@types/helmet": "~4.0.0",
+    "@types/node": "~18.11.18",
+    "ts-node-dev": "~2.0.0",
     "typescript": "^4.9.4"
   }
 }
