--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "dev": "ts-node-dev --respawn --pretty --transpile-only src/app.ts"
   },
   "dependencies": {
+    "@types/node-cron": "^2.0.4",
     "cookie-parser": "~1.4.4",
     "cors": "~2.8.5",
     "debug": "~2.6.9",
     "dotenv": "~16.0.3",
     "express": "~4.16.1",
+    "google-auth-library": "~8.7.0",
     "helmet": "~6.0.1",
-    "http-errors": "~1.6.3"
+    "http-errors": "~1.6.3",
+    "joi": "^17.7.0",
+    "jsonwebtoken": "~9.0.0",
+    "mongoose": "^6.8.4",
+    "node-cron": "^3.0.2",
+    "winston": "~3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "main": "app.js",
   "keywords": [],
@@ -24,7 +32,11 @@
     "@types/dotenv": "~8.2.0",
     "@types/express": "~4.17.15",
     "@types/helmet": "~4.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/mongoose": "~5.10.1",
     "@types/node": "~18.11.18",
+    "axios": "^1.2.3",
+    "cheerio": "^1.0.0-rc.12",
     "ts-node-dev": "~2.0.0",
     "typescript": "^4.9.4"
   }
